# CDUT_Dog

./: .envrc  .gitignore  README.md  ReadMe.md
docs/: task_competition_rules.md  task_implementation_status.md
install/: local_setup.sh  setup.sh
install/real_motor_controller/share/real_motor_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/real_motor_controller/share/real_motor_controller/launch/: real_motor_controller.launch.py
leg_control/: ReadMe.md
leg_control/src/APP/src/position_control/: CMakeLists.txt
leg_control/src/APP/src/position_control/config/: gait_controller.yaml
leg_control/src/APP/src/position_control/src/: gait_controller.cpp
leg_control/src/leg_mit_controller/: leg_mit_controller_plugin.xml  package.xml
leg_control/src/leg_mit_controller/include/leg_mit_controller/: mit_controller.hpp
log/: latest_build
mpc_leg_control/src/APP/src/mpc_control/: CMakeLists.txt  README.md  package.xml
mpc_leg_control/src/APP/src/mpc_control/config/: mpc_gait_controller.yaml
mpc_leg_control/src/APP/src/mpc_control/docs/: mpc_control_guide.md
mpc_leg_control/src/APP/src/mpc_control/launch/: mpc_gait_sim.launch.py
mpc_leg_control/src/APP/src/mpc_control/src/: mpc_gait_controller.cpp
mpc_leg_control/src/leg_mit_controller/: CMakeLists.txt
mpc_leg_control/src/leg_mit_controller/src/: mit_controller.cpp
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/: joint_names_robot_arm.yaml
src/arm_bringup/launch/: control.launch.py  display.launch.py  gazebo.launch.py  gravity_compensation.launch.py  sim.launch.py
src/arm_bringup/meshes/: base_link.STL  base_yaw_Link.STL  end_effector_fixed_joint.STL  forearm_link.STL  upper_arm_link.STL  wrist_link.STL
src/arm_bringup/models/arm_bringup/: model.config  model.sdf
src/arm_bringup/rviz/: robot_arm.rviz
src/arm_bringup/urdf/: robot_arm.csv  robot_arm.urdf
src/arm_control/: CMakeLists.txt  arm_hardware_plugins.xml  package.xml
src/arm_control/config/: 99-serial-can.rules  box_motion.yaml
src/arm_control/include/arm_control/: arm_system_hardware.hpp
src/arm_control/include/dm_j4340_motor_driver/: dm_j4340_motor_driver.hpp  dm_j4340_protocol.hpp  usbcan_serial.hpp
src/arm_control/src/: arm_controller.cpp  arm_system_hardware.cpp  box_motion_node.cpp  dm_j4340_scan_node.cpp  moveit_plan_service.cpp
src/arm_control/srv/: PlanMove.srv
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/config/: arm_controller.yaml
src/arm_controller/include/arm_controller/: kinematics_types.hpp
src/arm_controller/src/: arm_controller_node.cpp  forward_kinematics.cpp  inverse_kinematics.cpp
src/arm_model/: CMakeLists.txt  package.xml
src/arm_movelt/: .setup_assistant  CMakeLists.txt  package.xml
src/control/: fsm_hop.py  grayity_control.py
src/control/single_leg_hop/: READ.md  package.xml  setup.cfg  setup.py
src/control/single_leg_hop/single_leg_hop/: hop_node.py  locomotion_core.py
src/deep_motor_ros/: CMakeLists.txt  package.xml
src/deep_motor_ros/config/: four_can_real_robot.yaml
src/deep_motor_ros/include/deep_motor_ros/: can_interface_manager.hpp  can_protocol.h  deep_motor_node.hpp  deep_motor_sdk.h  motor_sdk_bridge.hpp  motor_types.hpp  motor_utils.hpp
src/deep_motor_ros/launch/: motor_bringup.launch.py
src/deep_motor_ros/src/: can_interface_manager.cpp  deep_motor_node.cpp  motor_node.cpp  motor_sdk_bridge.cpp  motor_test_node.cpp  motor_utils.cpp
src/dm_j4340_quad/: README.md  package.xml  setup.cfg  setup.py
src/dog_bringup/: CMakeLists.txt  package.xml
src/dog_bringup/config/: 99-serial-can.rules  dog.rviz  dog.world  robot_controllers.yaml
src/dog_bringup/config/description/: dog.urdf  reference.info  task.info
src/dog_bringup/launch/: all.launch.py  arm.launch.py  box_grid_debug.launch.py  box_nav_preview.launch.py  dog.launch.py  hardware_gait.launch.py  real.launch.py  real_to_sim_nav_preview.launch.py  sim.launch.py  target_nav_real.launch.py  target_perception.launch.py
src/dog_bringup/meshes/cdut_dog/: torso.STL
src/dog_bringup/msg/: Detection2D.msg  OcrResult.msg
src/dog_bringup/urdf/: const.xacro  dog.xacro  leg.xacro
src/dog_bringup/xacro/cdut_dog/: dog.urdf  dog.xacro  ros2_control.xacro
src/dog_common/: CMakeLists.txt  package.xml
src/dog_controllers/: CMakeLists.txt  dog_controllers.xml  package.xml
src/dog_controllers/include/dog_controllers/: dog_data_bridge.hpp  dog_test_controller.hpp
src/dog_controllers/src/: dog_data_bridge.cpp  dog_test_controller.cpp
src/dog_estimation/: CMakeLists.txt  package.xml
src/dog_hardware/: CMakeLists.txt  dog_hardware.xml
src/dog_imu/: package.xml  setup.cfg  setup.py
src/dog_imu/dog_imu/: convert.py  get_imu_rpy.py  imu_math.py  wit_can_node.py  wit_hcan_node.py  wit_hmodbus_node.py  wit_imu_ctrl.py  wit_modbus_demo.py  wit_modbus_node.py  wit_modbus_ui.py  wit_normal_demo.py  wit_normal_node.py  wit_normal_ui.py
src/dog_imu/launch/: rviz_and_imu.launch.py  wit_imu.launch.py
src/dog_imu/rviz/: wit_ros2_imu.rviz
src/dog_lidar/: CMakeLists.txt  package.xml
src/dog_lidar/src/: box_grid_locator_node.cpp
src/dog_position_control/: CMakeLists.txt  GAIT_ACTION_TOPIC.md  (+1 more)
src/dog_teleop/: CMakeLists.txt  package.xml
src/dog_teleop/config/: dog_teleop.yaml
src/dog_teleop/launch/: dog_teleop.launch.py
src/dog_teleop/src/: dog_teleop_node.cpp
src/package/deep_motor_ros/: CMakeLists.txt
src/package/deep_motor_ros/src/: motor_node.cpp
src/sim_motor_controller/: README.md  package.xml  setup.cfg  setup.py
src/sim_motor_controller/config/: sim_controllers.yaml  sim_motor_controller.yaml
src/sim_motor_controller/launch/: sim_motor_controller.launch.py
src/sim_motor_controller/src/sim_motor_controller/: sim_motor_controller_node.py
src/suction_controller/: package.xml  setup.cfg  setup.py
src/suction_controller/config/: suction_controller.yaml
src/suction_controller/launch/: suction_controller.launch.py
src/suction_controller/src/suction_controller/: __init__.py  suction_controller_node.py
(+226 files in other folders)
