<?xml version="1.0"?>
<package format="3">
  <name>arm_bringup</name>
  <version>0.1.0</version>
  <description>Unified bringup and description package for the arm project.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>arm_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>real_motor_controller</exec_depend>
  <exec_depend>sim_motor_controller</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
