<?xml version="1.0"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.1.0</version>
  <description>C++ forward/inverse kinematics and MIT command publisher for the robot arm.</description>

  <maintainer email="zhr@example.com">zhr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
