<?xml version="1.0"?>
<package format="3">
  <name>real_motor_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 tools for DM-J4340-2EC motors over the Damiao USB-to-CAN serial adapter.</description>

  <maintainer email="zhr@example.com">zhr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
